@@ -482,6 +482,26 @@ namespace MySql.Data.MySqlClient.Tests
             MySqlDateTime mdt = new MySqlDateTime(dt);
             Assert.AreEqual(dt.ToString(), mdt.ToString());
         }
+
+        /// <summary>
+        /// Bug #41021	DateTime format incorrect
+        /// </summary>
+        [Test]
+        public void DateFormat()
+        {
+            DateTime dt = DateTime.Now;
+            MySqlCommand cmd = new MySqlCommand("INSERT INTO Test VALUES(1, ?dt, NULL, NULL, NULL)", conn);
+            cmd.Parameters.Add("?dt", dt);
+            cmd.ExecuteNonQuery();
+
+            cmd.CommandText = "SELECT dt FROM Test WHERE DATE_FORMAT(DATE(dt), GET_FORMAT(DATETIME, 'ISO'))=?datefilter";
+            cmd.Parameters.Clear();
+            cmd.Parameters.Add("?datefilter", dt.Date);
+            using (MySqlDataReader reader = cmd.ExecuteReader())
+            {
+                Assert.IsTrue(reader.Read());
+            }
+        }
     }
 
 }
